--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
-
 /vendor
 /node_modules
+/public/storage
 Homestead.yaml
 Homestead.json
 .env
-*.zip
-TestController.php
-composer.lock
-config/database.php
-composer.json
-composer.json
-composer.lock
-config/app.php
-config/database.php
-composer.lock
-composer.json
+.env.example
+.gitattributes
+.gitignore
