--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /vendor
 /node_modules
 /public/storage
+/public/images
+/public/thumbnail
+/public/propertyimages
 Homestead.yaml
 Homestead.json
 .env
